@@ -1,6 +1,10 @@
 == 3030-12-31 Getting Started
 <p>If you're new to Constellation, read the <a href="" helpId="au.gov.asd.tac.constellation.functionality.gettingstarted">getting started guide</a>.</p>
 
+== 2024-05-28 Pages in the Conversation View
+<p>Pages have been added to the Conversation View to help with the loading and viewing of Conversations. The page numbers and arrows at the bottom of the view can be used to change between pages.</p>
+<p>A dropdown list has been added to the top of the view to select how many Conversation bubbles to display per page.</p>
+
 == 2024-03-21 Spell checking in Constellation
 <p>Spell checking is available in text areas of Constellation. E.g. Data access view (Extract Types and Extract Words Plugins). It can be added in other text areas as requested.</p>
 <p>When enabled, incorrect spellings and some grammar errors are highlighted and underlined. 
